# introspect-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.agents/skills/_references/: external-review-mechanics.md  repo-lenses.md
.agents/skills/implement-plan/: SKILL.md
.agents/skills/implement-plan/references/: handoff.md  review-orchestration.md  source-of-truth-guard.md
.agents/skills/review-plan/: SKILL.md
.agents/skills/review-plan/references/: context-hygiene.md
.agents/skills/review-pr/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml
agents/: openai.yaml
docs/: configuration.md  install-script-plan.md  t3-session-log-query-plan.md
docs/research/: README.md  adoption-snapshot.md  approach-matrix.md  local-session-store-findings.md  recommendations-and-experiments.md  valuable-goals-not-addressed.md
evals/: README.md  run_smoke.py
introspect_skill/: __init__.py  bundle.py  cli.py  codex.py  config.py  history.py  resolve.py  reviewer_sessions.py  sql.py  summaries.py  threads.py  timestamps.py
references/: log-sources.md
scripts/: build_bundle.py  claude_jsonl_summary.py  collect_introspection_requests.py  find_reviewer_session.py  provider_log_summary.py  resolve_target.py  thread_sqlite.py
tests/: __init__.py  support.py  test_bundle_and_summaries.py  test_config.py  test_history.py  test_resolve.py  test_reviewer_sessions.py  test_scripts.py
